testsuite/tests/properties/invalid_eq/foo.lkt
grammar foo_grammar {
    @main_rule main_rule <- or(Example("example") | Lit(@number))
}
